# Booth

./: README.md
app/: .env.example  index.html  package-lock.json  package.json
app/src/: App.jsx  HostScreen.jsx  MobileScreen.jsx  i18n.js  index.css  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  server.rs
app/src/locales/: en.json  zh.json
backend/: package-lock.json  package.json  server.js
backend/sockets/: boothSession.js  jamSession.js
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.jsx  HostScreen.jsx  MobileScreen.jsx  index.css
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/: server.rs
