[package]
name = "Booth"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "Booth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
axum = "0.8.4"
tokio = "1.49.0"
reqwest = { version = "0.13.2", features = ["json"] }
socketioxide = "0.16.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rand = "0.9.2"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
regex = "1.12.3"
urlencoding = "2.1.3"
local-ip-address = "0.6.10"
base64 = "0.22"
